# SGE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  SGEConfig.cmake.in  build.sh  main.cpp
examplesData/: CMakeLists.txt  test.cpp
examplesData/Resources/Logo/: Logo.icns
include/: AnimationSheet.h  CameraObject.h  CoordinateSystem.h  EventManager.h  GLTFModel.h  GLTFObject.h  GameObject.h  GameObjectBase.h  Mesh.h  Model.h  ModelGameObject.h  ObjModel.h  ObjModelObject.h  PhysicsObject.h  SGE.h  TextObject.h  UIObject.h  iGameObject.h  sge_utils.h  version.h
src/: AnimationSheet.cpp  CameraObject.cpp  CoordinateSystem.cpp  EventManager.cpp  GLTFModel.cpp  GLTFObject.cpp  GameObject.cpp  GameObjectBase.cpp  Mesh.cpp  Model.cpp  ModelGameObject.cpp  ObjModel.cpp  ObjModelObject.cpp  PhysicsObject.cpp  SGE.cpp  TextObject.cpp  UIObject.cpp  sge_utils.cpp
